private-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-private
spec:
  selector:
    matchLabels:
      app: nginx-private
  template:
    metadata:
      labels:
        app: nginx-private
    spec:
      imagePullSecrets:
      - name: docker-hub-secret # sesuaikan dengan nama secret yang dibuat
      containers:
      - name: nginx-private
        image: manggalakrida46/devops-academy:v1 # gunakan private image kalian
        resources:
          limits:
            memory: "10Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
