https-ingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-raw
  namespace: devops-academy
spec:
  selector:
    matchLabels:
      app: nginx-raw
  template:
    metadata:
      labels:
        app: nginx-raw
    spec:
      containers:
      - name: nginx-raw
        image: nginx:alpine
        resources:
          limits:
            memory: "32Mi"
            cpu: "50m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-raw
  namespace: devops-academy
spec:
  selector:
    app: nginx-raw
  ports:
  - port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-life4devops
  namespace: devops-academy
  annotations:
    # Menggunakan Nginx Ingress Controller
    kubernetes.io/ingress.class: "nginx"
    # Mengarahkan cert-manager untuk memproses SSL ini
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - life4devops.site
    secretName: tls-life4devops # Secret ini akan dibuat otomatis oleh cert-manager
  rules:
  - host: life4devops.site
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx-raw
            port:
              number: 80
